recharge amt on total bal issue solved.clear search box on delete. disable delete once order placed. validation small implementation

--- a/src/main/webapp/resources/core/css/style.css
+++ b/src/main/webapp/resources/core/css/style.css
@@ -1102,3 +1102,9 @@ body{
 .multiselect-container.dropdown-menu{
 	width:100%;
 }
+
+.toast-top-center{
+	/*margin-left:40% !important;
+	margin-top:20px;*/
+	left:auto !important;
+}
